--- a/blog/package.json
+++ b/blog/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.2.1",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
